# zr_vm

./: .cursorignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon  codex_decorator_import_trace.txt  tmp_alias_main.zri  tmp_alias_test.zri  tmp_array_add_burst.zr  tmp_array_pair_repro.zr  tmp_benchmark_aot_c_output.txt  tmp_benchmark_regex_check.cmake  tmp_decorator_win.txt  tmp_dump_compiler_features.sh  tmp_lsp_import_trace.txt  tmp_lsp_interface_trace.txt  tmp_module_win.txt  tmp_provider_support.zri  tmp_rebuild_compiler_features.sh  tmp_rebuild_type_inference.sh  tmp_relink_parser_shared.py  tmp_repl_runtime_member_error.stderr  tmp_repl_runtime_member_error.stdout  tmp_repl_runtime_member_error.txt  tmp_zrvm_case_matrix.sh  tmp_zrvm_case_matrix2.sh  tmp_zrvm_case_matrix3.sh  tmp_zrvm_case_matrix4.sh  tmp_zrvm_case_matrix5.sh  tmp_zrvm_case_project.sh  tmp_zrvm_case_status.sh  tmp_zrvm_compile_project.sh
tests/: CMakeLists.txt  TEST_EXECUTION_ORDER.md  gc_test_utils.c  gc_test_utils.h  gc_tests.c  test_runner.c  test_support.c  test_support.h  unity_config.h  unity_lifecycle_noop.c
tests/acceptance/: 2026-04-09-java-benchmark-integration.md  2026-04-09-language-benchmark-positioning.md  2026-04-09-precall-cached-closure-fast-path.md  2026-04-09-precall-callinfo-optimization.md  2026-04-09-tail-reuse-callinfo-reset.md  2026-04-09-wsl-clang-performance-report-rebuild.md  2026-04-10-matrix-add-2d-dispatch-native-binding-followup.md  2026-04-11-aot-runtime-bottleneck-fix.md  2026-04-11-typed-opcode-second-wave-closure.md  2026-04-12-gc-closure-stress-overhead.md  2026-04-12-typed-opcode-second-wave-perf-closure.md  2026-04-14-steady-state-performance-convergence.md  2026-04-16-w2-member-call-and-member-get-hotpath.md  2026-04-16-zr-vm-rust-binding-v1.md  2026-04-17-member-pic-same-prototype-refresh.md  2026-04-19-tracked-non-gc-profile-rerank-after-w2-temp-receiver.md  2026-04-19-w1-member-cached-slow-lane-followup.md  2026-04-19-w1-member-multislot-closeout.md  2026-04-19-w2-temp-to-object-member-call-lowering.md  2026-04-19-w3-gc-region-registry-hotspots.md  2026-04-20-w1-t7-t8-tracked-runtime-followup.md  2026-04-20-w2-call-chain-dispatch-callable-parameter-provenance.md  2026-04-20-w3-is-unreferenced-ignore-registry-gate.md  2026-04-21-w1-t7-t8-existing-pair-slow-lane.md  2026-04-24-w2-load-arith-array-items-cache.md  2026-05-02-w2-regression-stabilization.md  2026-05-16-inline-struct-byte-stack.md  2026-05-18-inline-frame-gc-native-entry.md  2026-06-03-semantic-inference-fact-layer.md  2026-06-04-typed-numeric-conversion.md  2026-06-05-aot-bool-logical-direct-writes.md  2026-06-05-aot-callable-constant-materialization-boundary.md  2026-06-05-aot-closure-value-direct-access.md  2026-06-05-aot-create-closure-materialization-boundary.md  2026-06-05-aot-generic-integer-shift-direct-writes.md  2026-06-05-aot-generic-mod-float-fallback-direct-writes.md  2026-06-05-aot-generic-numeric-arithmetic-direct-writes.md  2026-06-05-aot-generic-power-meta-boundary-direct-writes.md  2026-06-05-aot-generic-primitive-conversion-direct-writes.md  2026-06-05-aot-generic-primitive-equality-direct-writes.md  (+494 more)
tests/benchmarks/: README.md  gdb_container_pipeline_aot_c_crash.gdb  gdb_container_pipeline_aot_c_relwithdebinfo_crash.gdb  gdb_matrix_add_2d_aot_c_checksum.gdb  registry.cmake  test_benchmark_registry.c
tests/cli/: repl_expression_aggregate_smoke.js  repl_expression_array_display_smoke.js  repl_expression_assignment_context_smoke.js  repl_expression_object_smoke.js  repl_type_call_member_smoke.js  repl_type_call_reference_smoke.js  repl_type_conditional_branch_smoke.js  repl_type_expression_fact_smoke.js  repl_type_lambda_body_fact_smoke.js  repl_type_lambda_local_fact_smoke.js  repl_type_logical_comparison_smoke.js  repl_type_member_receiver_fact_smoke.js  repl_type_nested_expression_fact_smoke.js  repl_type_nested_numeric_smoke.js  repl_type_nested_ownership_smoke.js  repl_type_ownership_smoke.js  repl_type_query_reference_smoke.js  repl_type_reachability_smoke.js  test_cli_aot_writer_options.c  test_cli_args.c  test_cli_debug_e2e.c  test_cli_import_basic_fixture.c  test_cli_project_incremental.c  test_cli_repl_e2e.c  test_cli_zrm_fixture.c  test_cli_zrp_metadata_dump.c
tests/cmake/: member_slot_quickening_test.zro  run_benchmark_registry_test.cmake  run_cli_suite.cmake  run_executable_suite.cmake  run_performance_suite.cmake  run_projects_suite.cmake  zr_vm_test_host_env.cmake  zr_vm_write_ffi_fixture_path.cmake
tests/compileTime/: CMakeLists.txt  test_compile_time_execution.c
tests/container/: container_test_common.c  container_test_common.h  gdb_inline_pair_array_add.gdb  gdb_inline_pair_constructor.gdb  gdb_super_array_fill_capacity.gdb  test_container_metadata.c  test_container_runtime.c  test_container_type_inference.c  test_temp_value_root.c
tests/core/: gdb_clang_execution_dispatch_assert.gdb  gdb_map_object_access_cached_dispatch_wrapper_regression.gdb  gdb_map_object_access_concat_types.gdb  gdb_map_object_access_temp_root_begin.gdb  gdb_object_call_cached_dispatch_wrapper_release_failure.gdb  gdb_object_call_fast_wrapper_debug.gdb  gdb_object_call_known_native_fast_failure.gdb  gdb_object_call_known_native_fast_slots.gdb  gdb_tmp_bench_literal_create_hits.gdb  gdb_tmp_concat_pair_hits.gdb  gdb_tmp_concat_pair_map.gdb  gdb_tmp_dispatch_cached_descriptor_get.gdb  gdb_tmp_dispatch_member_get_cached_1493.gdb  gdb_tmp_dispatch_member_get_cached_sample.gdb  gdb_tmp_dispatch_member_object_get.gdb  gdb_tmp_dispatch_member_set_cached_1541.gdb  gdb_tmp_dispatch_object_get_by_name.gdb  gdb_tmp_dispatch_object_get_by_name_late.gdb  gdb_tmp_dispatch_resolve_known_vm_874.gdb  gdb_tmp_known_vm_member_stack_get_watch.gdb  (+22 more)
tests/gc/: gc_tests.c  (+20 more)
zr_vm_cli/: CMakeLists.txt
zr_vm_core/: CMakeLists.txt
zr_vm_language_server/: CMakeLists.txt
zr_vm_lib_ffi/: CMakeLists.txt
zr_vm_lib_math/: CMakeLists.txt
zr_vm_lib_network/: CMakeLists.txt
zr_vm_library/: CMakeLists.txt
zr_vm_rust_binding/: CMakeLists.txt
zr_vm_task/: CMakeLists.txt
(+2098 files in other folders)
